clusters/building-blocks/other/apps/hoarder/app/chrome-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: chrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chrome
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: chrome
          image: gcr.io/zenika-hub/alpine-chrome:123
          command:
            - chromium-browser
            - --headless
            - --no-sandbox
            - --disable-gpu
            - --disable-dev-shm-usage
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --hide-scrollbars
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 50Mi
