clusters/building-blocks/other/apps/hoarder/app/hoarder-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hoarder
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hoarder
    spec:
      containers:
        - name: hoarder
          image: ghcr.io/hoarder-app/hoarder:0.23.2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            limits:
              cpu: 200m
              memory: 750Mi
            requests:
              cpu: 10m
              memory: 200Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hoarder-pvc
