clusters/building-blocks/other/apps/hoarder/app/meilisearch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: meilisearch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: meilisearch
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.13.3
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 100Mi
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: meilisearch-pvc
