clusters/building-blocks/other/apps/hoarder/app/hoarder-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoarder
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: hoarder
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
