clusters/building-blocks/other/apps/hoarder/app/meilisearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: meilisearch
  ports:
    - protocol: TCP
      port: 7700
      targetPort: 7700
