clusters/building-blocks/other/apps/hoarder/app/hoarder-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hoarder
  namespace: default
  labels:
    app.kubernetes.io/name: hoarder
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`bookmarks.home.${DOMAIN_NAME}`)
    priority: 10
    middlewares:
    - name: local-ipallowlist
      namespace: edge
    services:
    - kind: Service
      name: hoarder
      namespace: default
      passHostHeader: true
      port: 3000
      scheme: http
